Fix stretched images and remove logger

--- a/app/assets/stylesheets/api/products.scss
+++ b/app/assets/stylesheets/api/products.scss
@@ -30,6 +30,7 @@
 }
 
 .imagee {
+    object-fit: cover;
     height: 100%;
     width: 100%;
     cursor: pointer;
